--- a/css/style.css
+++ b/css/style.css
@@ -15,45 +15,85 @@ body{
 
 /* about style */
 .about{
-    background-color: yellow;
+    
 }
 /* projects */
 .projects{
-    background: chocolate;
-    margin-top: 100px;
-    margin-bottom: 300px;
-    margin-left: 60px;
-    margin-right: 90px;
-
-/* top right bottom left */
-    /* margin: 100px 90px 300px 60px; */
-
-    /* all sides */
-    /* margin: 50px; */
-
-    /* up/down left/right */
-    /* margin: 100px 50px;  */
+    
 }
 
 .project_title{
-    font-size:45px;
-    color: blue;
+    
 }
 /* work styles */
 .work{
-    background-color: cyan;
-    padding-top: 100px;
-    padding-bottom: 50px;
-    padding-left: 20px;
-    padding-right: 40px;
-    
-    /* same as margin */
-    /* padding: 100px 40px 50px 20px; */
+
 }
 /* education style */
 .education{
-    background-color: darkblue;
+
 }
+
 .sidebar{
+    padding-top: 40px;
     background-color: #1e2939;
+    width: 370px;
+}
+.photo{
+    width: 370px;
+    margin-bottom: 50px;
+
+}
+.sidebar_title{
+    color: #ffffff;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 27px;
+    margin-bottom: 10px;
+}
+.contacts,
+.tech_skills,
+.soft_skills {
+    margin-left: 40px;
+}
+.contacts{
+    margin-bottom: 50px;
+}
+
+.contact_type{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 24px;
+    color: #ffffff;
+    margin-right: 10px;
+}
+.contact_link{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: #565e6a;
+}
+.tech_skills{
+    margin-bottom: 45px;
+}
+.tech_skills_list,
+.soft_skills_list{
+    color: #ffffff;
+    padding: 0;
+    margin-left: 17px;
+}
+.tech_skills_item,
+.soft_skills_item{
+    color: #fb6d3a;
+}
+.tech_skills_text,
+.soft_skills_text{
+    color: #ffffff;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
 }
