--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,155 @@
 body{
     font-family: 'Montserrat', sans-serif;
+    background-color: #f5f7fa;
+
 }
 
 .main{
     display: flex;
     flex-direction: row-reverse;
-    background-color: #f5f7fa;
     width: 1200px;
     margin: 0 auto;
 }
 .main_content{
-    background: #ffffff;
+    background: #fff;
+    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
+    padding: 105px 90px;
 }
 
 /* about style */
 .about{
-    
+    margin-bottom: 40px;
+}
+.about_position{
+    color: #000000;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 20px;
+}
+.about_name{
+    color: #000000;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 45px;
+    line-height: 55px;
+    margin-bottom: 25px;
+}
+.about_description{
+    color: #595959;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    width: 400px;
 }
 /* projects */
 .projects{
-    
+    margin-bottom: 50px;
 }
 
-.project_title{
-    
+.title{
+    color: #000000;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 27px;
+    margin-bottom: 10px;
 }
+.projects_list{
+    padding: 0;
+    margin-left: 15px;
+}
+.project_item{
+    color: #000000;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 24px;
+}
+.project,
+.project_link{
+    color: #595959;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+}
+.project_link{
+    margin-left: 10px;
+}
+.project_bracket{
+    color: #000000;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+}
+
 /* work styles */
 .work{
-
+    margin-bottom: 45px;
+}
+.work_position{
+    color: #000000;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+.organisation{
+    color: #fb6d3a;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+}
+.period{
+    color: #a8a8a8;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    margin-bottom: 10px;
+}
+.line{
+    color: #000000;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+}
+.work_list{
+    padding: 0;
+    margin-left: 15px;
+}
+.work_list_item{
+    color: #595959;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
 }
 /* education style */
 .education{
-
+}
+.university{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    color: #FB6D3A;
+    margin-bottom: 10px;
+}
+.spec{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000000;
+    margin-bottom: 10px;
 }
 
 .sidebar{
